--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "type": "module",
   "scripts": {
     "start": "node ./server.js",
-    "dev" : "nodemon ./server.js"
+    "dev": "nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
