--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "express": "^4.18.3",
+    "express-handlebars": "^7.1.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
