--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap": "^5.3.3",
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
