--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
