--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node ./server.js",
-    "dev": "nodemon ./server.js"
+    "start": "node ./server.js -p 9000",
+    "dev": "nodemon ./server.js --env dev",
+    "argv": "nodemon ./server.js -p 8080 --env=prod --persistence memory",
+    "memory": "nodemon ./server.js -p 8081 --env=prod --persistence memory",
+    "fs": "nodemon ./server.js -p 8082 --env=prod --persistence fs"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +17,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "commander": "^12.1.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
