--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node ./server.js",
-    "dev": "nodemon ./server.js"
+    "start": "node ./server.js -p 9000",
+    "dev": "nodemon ./server.js --env dev --persistence mongo",
+    "prod": "nodemon ./server.js -p 8082 --env=prod --persistence mongo",
+    "memory": "nodemon ./server.js -p 8081 --env=prod --persistence memory",
+    "test": "node ./server.js -p 8083 --env=dev --persistence fs"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +17,12 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "commander": "^12.1.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-compression": "^1.0.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
@@ -25,6 +30,7 @@
     "mongoose-paginate-v2": "^1.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
