--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "type": "module",
   "scripts": {
     "start": "node ./server.js -p 9000",
-    "dev": "nodemon ./server.js --env dev --persistence mongo",
+    "dev": "nodemon ./server.js -p 8080 --env=dev  --persistence mongo",
     "prod": "nodemon ./server.js -p 8082 --env=prod --persistence mongo",
     "memory": "nodemon ./server.js -p 8081 --env=prod --persistence memory",
     "test": "node ./server.js -p 8083 --env=dev --persistence fs",
-    "product": "node ./src/mocks/products.mock.js --env dev"
+    "product": "node ./src/mocks/products.mock.js --env dev",
+    "supertest": "mocha ./test/supertest --env=dev",
+    "stress": "artillery run ./test/artillery/stressTest.yaml -o ./test/artillery/stressTest.json",
+    "report": "artillery report ./test/artillery/stressTest.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^2.0.18",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "commander": "^12.1.0",
@@ -42,6 +46,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "nodemon": "^3.1.0"
+    "chai": "^5.1.1",
+    "mocha": "^10.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
