--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commander": "^12.1.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-compression": "^1.0.2",
